devops-k8s/k8s-mysql/mysql-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dp
spec:
  replicas: 1
  minReadySeconds: 10 #表示Port起來要等10秒 有延遲方便查看效果
  selector:
    matchLabels:
      app: mysql-dp #標籤要和template label裡面一樣
  template:
    metadata:
      labels:
        app: mysql-dp
    spec:
      containers:
        - name: mysql-dp
          image: yudady/mysql5:v1
