devops-k8s/k8s-mysql/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
    - name: tcp-services-3306
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql-dp
  type: ClusterIP
