devops-k8s/k8s-mysql/mysql-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: "yudady.gq"
  labels:
    app: mysql-ing
  name: mysql-ing
spec:
  ingressClassName: nginx
  rules:
    - host: "yudady.gq"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mysql-svc
                port:
                  number: 3306
