devops-k8s/k8s-mysql/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  minReadySeconds: 10 #表示Port起來要等10秒 有延遲方便查看效果
  selector:
    matchLabels:
      app: mysql #標籤要和template label裡面一樣
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - name: mysql-persistent-volume #要與volumes 裡面name一樣
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-svc
  name: mysql-svc
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  ports:
    - name: tcp
      port: 3306
      targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ing
spec:
  ingressClassName: nginx
  rules:
    - host: "yudady.gq"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mysql-svc
                port:
                  number: 8080
